objects/Party__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Create_New_Business_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create New Business Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Create_New_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create New Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Create_New_Person_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create New Person Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Credit_Impairment_Age__c</fullName>
        <label>Credit Impairment Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Credit_Impairment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Impairment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CRM_Employment_Type__c</fullName>
        <label>Employment Type</label>
        <picklist>
            <picklistValues>
                <fullName>PAYG - Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed - Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed - Low Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centerlink -Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary(PAYG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Existing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Party</relationshipLabel>
        <relationshipName>Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Existing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Party</relationshipLabel>
        <relationshipName>Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Gross_Income_Frequency__c</fullName>
        <label>Gross Income Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Gross_Income__c</fullName>
        <label>Gross Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Months_Self_Employed__c</fullName>
        <label>Months Self Employed</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CRM_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Co Borrower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Years_Self_Employed__c</fullName>
        <label>Years Self Employed</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Party</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00}</displayFormat>
        <label>Party Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Party</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>